--- a/Pages/index.html
+++ b/Pages/index.html
@@ -39,7 +39,7 @@
     </style>
     <link rel="shortcut icon" href="JS/nerdfavicon.ico" type="image/x-icon" />
     <meta charset="utf-8" />
-    <title>Binance Triangular Arbitrage Finder</title>
+    <title>Bybit Triangular Arbitrage Finder</title>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
       integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
