Added link to the youtube video

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -54,9 +54,7 @@
       <p>
         This tool analysis all the pairs on BYBIT SPOT exchange and provides the
         list of available arbitrage trade opportunities. click
-        <a target="_blank" href="https://www.youtube.com/watch?v=Rlx8LjHo9Jc"
-          >here</a
-        >
+        <a target="_blank" href="https://youtu.be/03wySxlklas">here</a>
         to watch the video and know more
       </p>
     </header>
